--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,9 @@
 version: "3.7"
 
 services:
-  mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
-    container_name: mysqldb
-    networks:
-      - spring-network
-    env_file: ./.env
-    environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
-    ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
-    volumes:
-      - db:/var/lib/mysql
+  
   app:
     working_dir: /spring-app
-    depends_on:
-      - mysqldb
     build:
       context: .
       dockerfile: Dockerfile
@@ -26,15 +11,15 @@ services:
     restart: on-failure
     container_name: $SPRING_CONTAINER
     networks:
-      - spring-network
+      - bored-network
     env_file: ./.env
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+      - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&createDatabaseIfNotExists=true",
+        "spring.datasource.url"  : "jdbc:mysql://mysql:3306/tpachat?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&createDatabaseIfNotExists=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.password" : "123456",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
@@ -43,8 +28,7 @@ services:
     stdin_open: true
     tty: true
 networks:
-  spring-network:
-    name: spring-network
-volumes:
-  db:
+  bored-network:
+    name: bored-network
+volumes: 
   .m2:
