--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,17 +38,17 @@ pipeline {
                  '''
             	 }
         
-      /* stage('Nexus') {
+       stage('Nexus') {
                            	steps{
                     	   	     sh 'mvn -Dmaven.test.skip=true deploy'
                                    
 
                     	   	}
 
-                    }*/
+                    }
      
 
- /* stage('buildimage/pushdockerhub') {
+ stage('buildimage/pushdockerhub') {
 
               steps {
                         script {
@@ -59,15 +59,15 @@ pipeline {
                               sh 'docker logout'    
                           }
               }
-        }*/
+        }
        
-      /*    stage('Docker-compose') {
+          stage('Docker-compose') {
             steps {
                 echo 'start container'
-                sh 'docker-compose up'
+                sh 'docker-compose up -d'
                
             }
-        }*/
+        }
     
        
 
