--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - AppNet
 
   spring-boot:
-    image: hibaef/springprojet
+    image: 22653116/springprojet
     container_name: spring
     ports:
       - 8089:8089
